--- a/inis/brick_cone_bump.ini
+++ b/inis/brick_cone_bump.ini
@@ -1,6 +1,6 @@
 [IO]
-scene = scenefiles/cube_bilinear.json
-output = outputs/cube_bilinear.png
+scene = scenefiles/brick_cone.json
+output = outputs/brick_cone_bump.png
 output-mipmaps = outputs/mipmaps/
 textures = scenefiles/textures/
 
@@ -10,17 +10,20 @@ height = 768
 
 [Feature]
 acceleration = true
-parallel = true
+parallel = false
 shadows = true
-reflect = true
-texture = true
+reflect = false
+texture = false
+bump-mapping = true
+parallax-mapping = false
 super-sample = false
-mipmapping = true
+mipmapping = false
 
 [Settings]
 texture-filter = "bilinear"
+bump-map-filter = "bilinear"
+bump-scale = 0.01
 samples-per-pixel = 1
 super-sampler-pattern = "grid"
 maximum-recursive-depth = 4
 only-render-normals = false
-
