--- a/inis/brick_cylinder_texture.ini
+++ b/inis/brick_cylinder_texture.ini
@@ -1,6 +1,6 @@
 [IO]
-scene = scenefiles/moire_checkerboard.json
-output = outputs/moire_checkerboard.png
+scene = scenefiles/brick_cylinder.json
+output = outputs/brick_cylinder_texture.png
 output-mipmaps = outputs/mipmaps/
 textures = scenefiles/textures/
 
@@ -10,17 +10,20 @@ height = 768
 
 [Feature]
 acceleration = true
-parallel = true
+parallel = false
 shadows = true
-reflect = true
+reflect = false
 texture = true
+bump-mapping = false
+parallax-mapping = false
 super-sample = false
-mipmapping = true
+mipmapping = false
 
 [Settings]
 texture-filter = "bilinear"
+bump-map-filter = "bilinear"
+bump-scale = 0.005
 samples-per-pixel = 1
 super-sampler-pattern = "grid"
 maximum-recursive-depth = 4
 only-render-normals = false
-
