--- a/inis/with_acceleration.ini
+++ b/inis/with_acceleration.ini
@@ -1,6 +1,6 @@
 [IO]
-scene = scenefiles/cone_checkerboard.json
-output = outputs/cone_checkerboard.png
+scene = scenefiles/recursive_sphere_7.json
+output = outputs/with_acceleration.png
 output-mipmaps = outputs/mipmaps/
 textures = scenefiles/textures/
 
@@ -10,17 +10,20 @@ height = 768
 
 [Feature]
 acceleration = true
-parallel = true
-shadows = true
-reflect = true
-texture = true
+parallel = false
+shadows = false
+reflect = false
+texture = false
+bump-mapping = false
+parallax-mapping = false
 super-sample = false
-mipmapping = true
+mipmapping = false
 
 [Settings]
 texture-filter = "bilinear"
+bump-map-filter = "bilinear"
+bump-scale = 0.01
 samples-per-pixel = 1
 super-sampler-pattern = "grid"
 maximum-recursive-depth = 4
 only-render-normals = false
-
