--- a/inis/without_acceleration.ini
+++ b/inis/without_acceleration.ini
@@ -1,24 +1,29 @@
 [IO]
-scene = inputs/scenefiles/intersect/optional/recursive_sphere_7.json
-output = outputs-student/intersect/optional/recursive_sphere_7.png
+scene = scenefiles/recursive_sphere_7.json
+output = outputs/acceleration_test.png
+output-mipmaps = outputs/mipmaps/
+textures = scenefiles/textures/
 
 [Canvas]
 width = 1024
 height = 768
 
 [Feature]
-shadows = true
-reflect = true
-refract = false
-texture = true
-texture-filter = nearest
+acceleration = false
 parallel = false
+shadows = false
+reflect = false
+texture = false
+bump-mapping = false
+parallax-mapping = false
 super-sample = false
-post-process = false
-acceleration = true
-depthoffield = false
+mipmapping = false
 
 [Settings]
+texture-filter = "bilinear"
+bump-map-filter = "bilinear"
+bump-scale = 0.01
 samples-per-pixel = 1
-maximum-recursive-depth = 2
-
+super-sampler-pattern = "grid"
+maximum-recursive-depth = 4
+only-render-normals = false
