--- a/inis/with_acceleration.ini
+++ b/inis/with_acceleration.ini
@@ -1,5 +1,5 @@
 [IO]
-scene = scenefiles/primitive_salad_1.json
+scene = scenefiles/recursive_sphere_9.json
 output = outputs/acceleration_test.png
 output-mipmaps = outputs/mipmaps/
 textures = scenefiles/textures/
@@ -11,8 +11,8 @@ height = 768
 [Feature]
 acceleration = true
 parallel = false
-shadows = false
-reflect = false
+shadows = true
+reflect = true
 texture = false
 bump-mapping = false
 parallax-mapping = false
