--- a/inis/repeat_test_bump.ini
+++ b/inis/repeat_test_bump.ini
@@ -1,6 +1,6 @@
 [IO]
 scene = scenefiles/repeat_test.json
-output = outputs/repeat_test.png
+output = outputs/repeat_test_bump.png
 output-mipmaps = outputs/mipmaps/
 textures = scenefiles/textures/
 
@@ -13,7 +13,7 @@ acceleration = true
 parallel = false
 shadows = true
 reflect = true
-texture = true
+texture = false
 bump-mapping = true
 parallax-mapping = false
 super-sample = false
