--- a/inis/repeat_test_texture.ini
+++ b/inis/repeat_test_texture.ini
@@ -1,6 +1,6 @@
 [IO]
 scene = scenefiles/repeat_test.json
-output = outputs/repeat_test.png
+output = outputs/repeat_test_texture.png
 output-mipmaps = outputs/mipmaps/
 textures = scenefiles/textures/
 
@@ -14,7 +14,7 @@ parallel = false
 shadows = true
 reflect = true
 texture = true
-bump-mapping = true
+bump-mapping = false
 parallax-mapping = false
 super-sample = false
 mipmapping = false
