--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(${PROJECT_NAME}
   src/utils/scenefileparser.h
   src/camerapath.cpp
   src/camerapath.h
+  src/renderer.h src/renderer.cpp
 
 )
 
